Adding fatalthrowable to wrappcheckedexception pathways (#17)
* Added FatalThrowable and associated helper methods to inhibit WrappedCheckedException from wrapping a fatal throwable

* Updated with collections tweaks from the last week of implementing in production code base

* Refactored to transition to JSpecify from JetBrains nullability annotations

* Integrated FatalThrowable more deeply into library, added and expanded related tests

* Expanded, but did not complete, the remaining surface area of ListsOps

* Expanded and completed the remaining test surface area of MapsOps

* Added explicit catch for FatalThrowable, and tweaked tests to verify the pathway is exercised

* Added SetsOps.containsAny, and related tests